--- a/MusicSave/Base.lproj/Main.storyboard
+++ b/MusicSave/Base.lproj/Main.storyboard
@@ -19,32 +19,37 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="bL2-c8-WLo">
-                                <rect key="frame" x="20" y="174" width="374" height="76.333333333333314"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="bL2-c8-WLo">
+                                <rect key="frame" x="20" y="174" width="374" height="77"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="You have saved:" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VnP-nm-ljF">
                                         <rect key="frame" x="0.0" y="0.0" width="374" height="20.333333333333332"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="20.333333333333332" id="pLd-23-sEW"/>
+                                        </constraints>
                                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                         <color key="textColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$135.00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E27-JF-SUr">
-                                        <rect key="frame" x="0.0" y="28.333333333333343" width="374" height="48"/>
+                                        <rect key="frame" x="0.0" y="28.333333333333339" width="374" height="48.666666666666657"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="40"/>
                                         <color key="textColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
                             </stackView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bMJ-sz-0Py">
-                                <rect key="frame" x="20" y="311" width="560" height="15"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bMJ-sz-0Py">
+                                <rect key="frame" x="20" y="311" width="374" height="15"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="15" id="jpB-OF-RwU"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <color key="textColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iGp-bS-wrN">
-                                <rect key="frame" x="20" y="550" width="560" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iGp-bS-wrN">
+                                <rect key="frame" x="20" y="546" width="374" height="30"/>
                                 <state key="normal" title="Export"/>
                                 <connections>
                                     <action selector="exportActionWithSender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="dK4-kp-Tc7"/>
@@ -54,11 +59,15 @@
                         <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="trailingMargin" secondItem="bMJ-sz-0Py" secondAttribute="trailing" id="1Lk-aK-Uk4"/>
-                            <constraint firstItem="bL2-c8-WLo" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="110" id="5Li-vF-0PT"/>
-                            <constraint firstItem="bMJ-sz-0Py" firstAttribute="top" secondItem="bL2-c8-WLo" secondAttribute="bottom" constant="60" id="Lxo-yx-74P"/>
+                            <constraint firstItem="bMJ-sz-0Py" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="311" id="6Gb-NN-LtK"/>
+                            <constraint firstItem="bMJ-sz-0Py" firstAttribute="top" secondItem="bL2-c8-WLo" secondAttribute="bottom" constant="60" id="Jmj-T7-jre"/>
+                            <constraint firstItem="iGp-bS-wrN" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="TMA-8J-R1Z"/>
                             <constraint firstAttribute="trailingMargin" secondItem="bL2-c8-WLo" secondAttribute="trailing" id="Xnp-0d-Qqp"/>
                             <constraint firstItem="bMJ-sz-0Py" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="YSJ-7W-S5s"/>
+                            <constraint firstItem="iGp-bS-wrN" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="fPM-A7-MKp"/>
+                            <constraint firstItem="bL2-c8-WLo" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="130" id="m4c-xe-WZH"/>
                             <constraint firstItem="bL2-c8-WLo" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="nlk-ci-c4U"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="iGp-bS-wrN" secondAttribute="bottom" constant="160" id="ph6-S3-UCB"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="MusicSave" id="AMd-Mg-EWc">
@@ -80,7 +89,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="928" y="319"/>
+            <point key="canvasLocation" x="927.536231884058" y="317.93478260869568"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="4c5-Ud-54Z">
